--- a/src/main/resources/templates/examDetail.html
+++ b/src/main/resources/templates/examDetail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
-    <title>部门明细</title>
+    <title>题目明细</title>
 	
     <meta http-equiv="keywords" content="keyword1,keyword2,keyword3">
     <meta http-equiv="description" content="this is my page">
