--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -15,6 +15,13 @@
             src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <script th:src="@{/static/layui/layui.js}" charset="utf-8"></script>
     <script th:src="@{/static/layui/xadmin.js}" charset="utf-8"></script>
+    <script th:inline="javascript">
+        function checkOut(){
+            if(confirm("是否确认退出?")){
+                top.location.href="checkOut.action";
+            }
+        }
+    </script>
 </head>
 <body class="index">
 <!-- 顶部开始 -->
@@ -68,7 +75,7 @@
                     </a></li>
                     <li>
 <!--                        <a onclick="xadmin.add_tab('考试记录','./examDetail')">-->
-                        <a href="examDetail" target="contentPage">
+                        <a href="examHistory" target="contentPage">
                         <i class="iconfont">&#xe6a7;</i> <cite>考试记录</cite>
                     </a></li>
                 </ul></li>
@@ -76,10 +83,12 @@
             <li><a th:onclick="'javascript:;'"> <i class="iconfont left-nav-li">&#xe6b8;</i>
                 <cite>系统管理</cite> <i class="iconfont nav_right">&#xe697;</i></a>
                 <ul class="sub-menu">
-                    <li><a onclick="xadmin.add_tab('密码重置','./admin')">
+                    <li>
+                        <a href="changePwd" target="contentPage">
                         <i class="iconfont">&#xe6a7;</i> <cite>密码重置</cite>
                     </a></li>
-                    <li><a onclick="xadmin.add_tab('系统退出','./admin')">
+                    <li>
+                        <a onclick="checkOut()">
                         <i class="iconfont">&#xe6a7;</i> <cite>系统退出</cite>
                     </a></li>
                 </ul></li>
