--- a/src/main/resources/templates/examAddOrModify.html
+++ b/src/main/resources/templates/examAddOrModify.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
-    <title>部门编辑</title>
+    <title>题目管理</title>
     <meta http-equiv="keywords" content="keyword1,keyword2,keyword3"/>
     <meta http-equiv="description" content="this is my page"/>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
@@ -17,13 +17,9 @@
 			  location.href = "examManager?pageNo="+[[${pageNo}]];
 		  }
 		  $(function (){
-			  var id=[
-					  [${id}]
-			  ];
-			  $("#pageNo").val([
-					  [${pageNo}]
-			  ]);
-			  if(id==null){
+			  var id=[[${id}]];
+			  $("#pageNo").val([[${pageNo}]]);
+			  if(id!=null){
 				  $("input[type=submit]").val("修改");
 				  $.ajax({
 					  type:"POST",
@@ -66,50 +62,49 @@
   </head>
   
   <body>
-   	<form class="layui-table layui-form" th:action="@{question/addOrModify.action}" method="post">
+   	<form class="layui-table layui-form" action="question/addOrModify.action" method="post">
 		<input type="hidden" id="questionId" name="id"/>
 		<input type="hidden" id="pageNo" name="pageNo"/>
    	<table class="layui-table layui-form" id="deptEditTable">
    		<tr>
    			<td>题干:</td>
    			<td>
-				<label for="questionBody"></label><textarea id="questionBody" name="questionBody"></textarea>
+				<textarea id="questionBody" name="questionBody"></textarea>
    			</td>
    		</tr>
    		<tr>
    			<td>选项A:</td>
    			<td>
-				<label for="option1"></label><input type = "text" name="option1" id="option1"/>
+				<input type = "text" name="option1" id="option1"/>
    			</td>
    		</tr>
    		<tr>
    			<td>选项B:</td>
    			<td>
-				<label for="option2"></label><input type = "text" name="option2" id="option2"/>
+				<input type = "text" name="option2" id="option2"/>
    			</td>
    		</tr>
    		<tr>
    			<td>选项C:</td>
    			<td>
-				<label for="option3"></label><input type = "text" name="option3" id="option3"/>
+				<input type = "text" name="option3" id="option3"/>
    			</td>
    		</tr>
 		<tr>
 			<td>选项D:</td>
 			<td>
-				<label for="option4"></label><input type = "text" name="option4" id="option4"/>
+				<input type = "text" name="option4" id="option4"/>
 			</td>
 		</tr>
 		<tr>
 			<td>正确答案:</td>
 			<td>
-				<label for="q_cur"></label><select id="q_cur" name="q_cur">
+				<select id="q_cur" name="q_cur">
 					<option value="1">A</option>
 					<option value="2">B</option>
 					<option value="3">C</option>
 					<option value="4">D</option>
 				</select>
-
 			</td>
 		</tr>
 		<tr>
