--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,7 +36,7 @@
                         location.href="admin";
                     }else if(res=="ok"){
                         alert("登录成功");
-                        location.href="exam";
+                        location.href="admin";
                     }else{
                         alert("登录失败"+res);
                     }
