--- a/src/main/resources/templates/examAddOrModify.html
+++ b/src/main/resources/templates/examAddOrModify.html
@@ -13,6 +13,10 @@
 	  <script th:src="@{/static/layui/layui.js}" charset="utf-8"></script>
 	  <script th:src="@{/static/js/xadmin.js}" charset="utf-8"></script>
 	  <script th:inline="javascript">
+		  layui.use('form', function(){
+			  var form = layui.form;
+			  form.render();
+		  });
 		  function backManager(){
 			  location.href = "examManager?pageNo="+[[${pageNo}]];
 		  }
@@ -40,24 +44,24 @@
 		  });
 	  </script>
 	<style type="text/css">
-		body,div,table,tr,td{
-			margin: 0px;
-			padding: 0px;
-		}
+		/*body,div,table{*/
+		/*	margin: 0px;*/
+		/*	padding: 0px;*/
+		/*}*/
 	
 		#deptEditTable{
 			font-size: 15px;
 			border-collapse: collapse;
 			width: 350px;
 			margin: 20px auto;
-			
-			
 		}
-		
+		#tbody{
+			width: 150px;
+		}
 		#deptEditTable td{
 			height: 40px;
 		}
-	
+
 	</style>
   </head>
   
@@ -65,40 +69,67 @@
    	<form class="layui-table layui-form" action="question/addOrModify.action" method="post">
 		<input type="hidden" id="questionId" name="id"/>
 		<input type="hidden" id="pageNo" name="pageNo"/>
-   	<table class="layui-table layui-form" id="deptEditTable">
+   	<table class="layui-table">
    		<tr>
    			<td>题干:</td>
    			<td>
-				<textarea id="questionBody" name="questionBody"></textarea>
+<!--				<textarea id="questionBody" name="questionBody"></textarea>-->
+				<div class="layui-form-item">
+					<label class="layui-form-label"></label>
+					<div class="layui-input-block">
+						<input class="layui-input" type = "text" id="questionBody" name="questionBody"/>
+					</div>
+				</div>
    			</td>
    		</tr>
    		<tr>
    			<td>选项A:</td>
    			<td>
-				<input type = "text" name="option1" id="option1"/>
+				<div class="layui-form-item">
+					<label class="layui-form-label"></label>
+					<div class="layui-input-block">
+						<input class="layui-input" type = "text" name="option1" id="option1"/>
+					</div>
+				</div>
    			</td>
    		</tr>
    		<tr>
    			<td>选项B:</td>
    			<td>
-				<input type = "text" name="option2" id="option2"/>
+				<div class="layui-form-item">
+					<label class="layui-form-label"></label>
+					<div class="layui-input-block">
+						<input class="layui-input" type = "text" name="option2" id="option2"/>
+					</div>
+				</div>
    			</td>
    		</tr>
    		<tr>
    			<td>选项C:</td>
    			<td>
-				<input type = "text" name="option3" id="option3"/>
+				<div class="layui-form-item">
+					<label class="layui-form-label"></label>
+					<div class="layui-input-block">
+						<input class="layui-input" type = "text" name="option3" id="option3"/>
+					</div>
+				</div>
    			</td>
    		</tr>
 		<tr>
 			<td>选项D:</td>
 			<td>
-				<input type = "text" name="option4" id="option4"/>
+				<div class="layui-form-item">
+					<label class="layui-form-label"></label>
+					<div class="layui-input-block">
+						<input class="layui-input" type = "text" name="option4" id="option4"/>
+					</div>
+				</div>
 			</td>
 		</tr>
 		<tr>
 			<td>正确答案:</td>
 			<td>
+<!--				<input type = "text" name="q_cur" id="q_cur"/>-->
 				<select id="q_cur" name="q_cur">
 					<option value="1">A</option>
 					<option value="2">B</option>
