--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -37,7 +37,8 @@
                         location.href="admin";
                     }else if(res=="ok"){
                         alert("登录成功");
-                        location.href="admin?username="+username;
+                        // location.href="admin?username="+username;
+                        location.href="admin";
                     }else{
                         alert("登录失败"+res);
                     }
